# candle

./: .gitignore  .gitmodules  Cargo.toml  README.md  index.html  print.html  searchindex.js  toc.js
.cargo/: config.toml
candle-core/: Cargo.toml
candle-core/examples/: tensor-tools.rs
candle-core/src/: convert.rs  cpu_backend.rs  cuda_backend.rs  custom_op.rs  device.rs  display.rs  dtype.rs  dummy_gcu_backend.rs  error.rs  gcu_backend.rs  layout.rs  lib.rs  npy.rs  offloadable.rs  op.rs  safetensors.rs  shape.rs  sort.rs  storage.rs  tensor.rs  tensor_cat.rs
candle-core/src/cpu/: kernels.rs
candle-core/src/cpu_backend/: mod.rs  utils.rs
candle-core/src/cuda_backend/: mod.rs
candle-core/src/metal_backend/: device.rs  mod.rs
candle-core/src/quantized/: cuda.rs  dummy_cuda.rs  dummy_gcu.rs  gcu.rs  ggml_file.rs  mod.rs
candle-core/tests/: quantized_tests.rs
candle-examples/: Cargo.toml
candle-examples/src/: lib.rs
candle-flash-attn/: Cargo.toml  build.rs
candle-flash-attn/kernels/: flash.h  flash_api.cu  flash_fwd_kernel.h  flash_fwd_launch_template.h  flash_fwd_split_hdim128_bf16_sm80.cu  flash_fwd_split_hdim128_fp16_sm80.cu  flash_fwd_split_hdim160_bf16_sm80.cu  flash_fwd_split_hdim160_fp16_sm80.cu  flash_fwd_split_hdim192_bf16_sm80.cu  flash_fwd_split_hdim192_fp16_sm80.cu  flash_fwd_split_hdim256_bf16_sm80.cu  flash_fwd_split_hdim256_fp16_sm80.cu  flash_fwd_split_hdim32_bf16_sm80.cu  flash_fwd_split_hdim32_fp16_sm80.cu  flash_fwd_split_hdim64_bf16_sm80.cu  flash_fwd_split_hdim64_fp16_sm80.cu  flash_fwd_split_hdim96_bf16_sm80.cu  flash_fwd_split_hdim96_fp16_sm80.cu  utils.h
candle-flash-attn/src/: ffi.rs  lib.rs
candle-kernels/src/: quantized.cu
candle-metal-kernels/: Cargo.toml
candle-metal-kernels/src/: lib.rs  reduce.metal  unary.metal
candle-nn/: Cargo.toml
candle-nn/src/: layer_norm.rs  lib.rs  linear.rs  ops.rs  rotary_emb.rs  var_builder.rs
candle-onnx/src/: eval.rs
candle-onnx/tests/: ops.rs
candle-pyo3/src/: lib.rs
candle-transformers/: Cargo.toml
(+47 files in other folders)
